Settings and user model

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 django = "*"
+django-debug-toolbar = "*"
+psycopg2 = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.7"
