--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django = "*"
 django-debug-toolbar = "*"
 psycopg2 = "*"
 django-allauth = "*"
+django-email-bandit = "*"
 
 [requires]
 python_version = "3.7"
